[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = { version = "2.0.3", features = ["watch"] }
tauri-plugin-log = "2.0.2"
tauri-plugin-store = "2.1.0"
tauri-plugin-decorum = { "path" = "../../../packages/tauri-plugin-decorum" }
tauri-plugin-os = "2.0.1"
grep-matcher = "0.1.7"
grep-searcher = "0.1.14"
grep-regex = "0.1.13"
tauri-plugin-dialog = "2.0.3"
sqlx = "0.8.2"
regex = "1.11.1"
enigo = "0.3.0"
tauri-plugin-clipboard-manager = "2.0.2"
tauri-plugin-http = "2.0.4"
tauri-plugin-stronghold = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2.0.1"

